app_k8s/ingress/ingress-networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-server-to-webhook
  namespace: ingress-nginx 
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller 
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: {} 
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 8443
